--- a/references.bib
+++ b/references.bib
@@ -572,3 +572,144 @@ Subject{\_}term{\_}id: phase-transitions-and-critical-phenomena;policy;sociology
 	number = {2},
 	note = {Publisher: Elsevier}
 }
+
+@book{mcelreath2020,
+	title = {Statistical rethinking: A Bayesian course with examples in R and Stan},
+	author = {McElreath, Richard},
+	year = {2020},
+	date = {2020},
+	publisher = {CRC press}
+}
+
+@book{gelman2020,
+	title = {Regression and other stories},
+	author = {Gelman, Andrew and Hill, Jennifer and Vehtari, Aki},
+	year = {2020},
+	date = {2020},
+	publisher = {Cambridge University Press}
+}
+
+@article{roberts2019,
+	title = {stm: An R Package for Structural Topic Models},
+	author = {Roberts, Margaret E. and Stewart, Brandon M. and Tingley, Dustin},
+	year = {2019},
+	month = {10},
+	date = {2019-10-31},
+	journal = {Journal of Statistical Software},
+	pages = {1--40},
+	volume = {91},
+	number = {1},
+	doi = {10.18637/jss.v091.i02},
+	url = {https://www.jstatsoft.org/index.php/jss/article/view/v091i02},
+	note = {Number: 1},
+	langid = {en}
+}
+
+@inproceedings{mimno2014,
+	title = {Low-dimensional embeddings for interpretable anchor-based topic inference},
+	author = {Mimno, David and Lee, Moontae},
+	year = {2014},
+	date = {2014},
+	pages = {1319{\textendash}1328}
+}
+
+@article{denny2018,
+	title = {Text preprocessing for unsupervised learning: Why it matters, when it misleads, and what to do about it},
+	author = {Denny, Matthew J. and Spirling, Arthur},
+	year = {2018},
+	date = {2018},
+	journal = {Political Analysis},
+	pages = {168{\textendash}189},
+	volume = {26},
+	number = {2},
+	note = {Publisher: Cambridge University Press}
+}
+
+@article{lizardo2014,
+	title = {Omnivorousness as the bridging of cultural holes: A measurement strategy},
+	author = {Lizardo, Omar},
+	year = {2014},
+	date = {2014},
+	journal = {Theory and Society},
+	pages = {395{\textendash}419},
+	volume = {43},
+	number = {3},
+	note = {Publisher: Springer}
+}
+
+@book{rodríguez2015,
+	title = {Radical deprivation on trial},
+	author = {{Rodríguez}, {César} and {Rodríguez}, Diana},
+	year = {2015},
+	date = {2015},
+	publisher = {Cambridge University Press}
+}
+
+@article{blei2012,
+	title = {Probabilistic topic models},
+	author = {Blei, David M.},
+	year = {2012},
+	date = {2012},
+	journal = {Communications of the ACM},
+	pages = {77{\textendash}84},
+	volume = {55},
+	number = {4},
+	note = {Publisher: ACM New York, NY, USA}
+}
+
+@book{hart2012,
+	title = {The concept of law},
+	author = {Hart, Herbert L. A.},
+	year = {2012},
+	date = {2012},
+	publisher = {Oxford University Press}
+}
+
+@article{kennedy1991,
+	title = {A semiotics of legal argument},
+	author = {Kennedy, Duncan},
+	year = {1991},
+	date = {1991},
+	journal = {Syracuse L. Rev.},
+	pages = {75},
+	volume = {42},
+	note = {Publisher: HeinOnline}
+}
+
+@book{levi2013,
+	title = {An introduction to legal reasoning},
+	author = {Levi, Edward H.},
+	year = {2013},
+	date = {2013},
+	publisher = {University of Chicago Press}
+}
+
+@book{calavita2016,
+	title = {Invitation to law and society: An introduction to the study of real law},
+	author = {Calavita, Kitty},
+	year = {2016},
+	date = {2016},
+	publisher = {University of Chicago Press}
+}
+
+@article{dworkin1975,
+	title = {Hard cases},
+	author = {Dworkin, Ronald},
+	year = {1975},
+	date = {1975},
+	journal = {Harv. L. Rev.},
+	pages = {1057--1109},
+	volume = {88}
+}
+
+@article{whitley1970,
+	title = {Black boxism and the sociology of science: a discussion of the major developments in the field},
+	author = {Whitley, Richard D.},
+	year = {1970},
+	date = {1970},
+	journal = {The Sociological Review},
+	pages = {61{\textendash}92},
+	volume = {18},
+	number = {1{\_}suppl},
+	note = {Publisher: SAGE Publications Sage UK: London, England}
+}
