--- a/references.bib
+++ b/references.bib
@@ -713,3 +713,88 @@ Subject{\_}term{\_}id: phase-transitions-and-critical-phenomena;policy;sociology
 	number = {1{\_}suppl},
 	note = {Publisher: SAGE Publications Sage UK: London, England}
 }
+
+@article{hoffman2018,
+	title = {The (Protestant) Bible, the (printed) sermon, and the word(s): The semantic structure of the Conformist and Dissenting Bible, 1660{\textendash}1780},
+	author = {Hoffman, Mark Anthony and Cointet, Jean-Philippe and Brandt, Philipp and Key, Newton and Bearman, Peter},
+	year = {2018},
+	month = {06},
+	date = {2018-06-01},
+	journal = {Poetics},
+	pages = {89--103},
+	volume = {68},
+	doi = {10.1016/j.poetic.2017.11.002},
+	url = {https://www.sciencedirect.com/science/article/pii/S0304422X17301778},
+	langid = {en}
+}
+
+@article{bail2016,
+	title = {Combining natural language processing and network analysis to examine how advocacy organizations stimulate conversation on social media},
+	author = {Bail, Christopher Andrew},
+	year = {2016},
+	date = {2016},
+	journal = {Proceedings of the National Academy of Sciences},
+	pages = {11823{\textendash}11828},
+	volume = {113},
+	number = {42},
+	note = {Publisher: National Acad Sciences}
+}
+
+@article{neal2014,
+	title = {The backbone of bipartite projections: Inferring relationships from co-authorship, co-sponsorship, co-attendance and other co-behaviors},
+	author = {Neal, Zachary},
+	year = {2014},
+	month = {10},
+	date = {2014-10-01},
+	journal = {Social Networks},
+	pages = {84--97},
+	volume = {39},
+	doi = {10.1016/j.socnet.2014.06.001},
+	url = {https://www.sciencedirect.com/science/article/pii/S0378873314000343},
+	langid = {en}
+}
+
+@article{domagalski2021,
+	title = {Backbone: An R package for extracting the backbone of bipartite projections},
+	author = {Domagalski, Rachel and Neal, Zachary P. and Sagan, Bruce},
+	year = {2021},
+	date = {2021},
+	journal = {Plos one},
+	pages = {e0244363},
+	volume = {16},
+	number = {1},
+	note = {Publisher: Public Library of Science San Francisco, CA USA}
+}
+
+@article{blondel2008,
+	title = {Fast unfolding of communities in large networks},
+	author = {Blondel, Vincent D. and Guillaume, Jean-Loup and Lambiotte, Renaud and Lefebvre, Etienne},
+	year = {2008},
+	date = {2008},
+	journal = {Journal of statistical mechanics: theory and experiment},
+	pages = {P10008},
+	volume = {2008},
+	number = {10},
+	note = {Publisher: IOP Publishing}
+}
+
+@article{pachucki2010,
+	title = {Cultural holes: Beyond relationality in social networks and culture},
+	author = {Pachucki, Mark A. and Breiger, Ronald L.},
+	year = {2010},
+	date = {2010},
+	journal = {Annual review of sociology},
+	pages = {205{\textendash}224},
+	volume = {36},
+	note = {Publisher: Annual Reviews}
+}
+
+@book{grimmer2022,
+	title = {Text as Data},
+	author = {Grimmer, Justin and Roberts, Margaret E. and Stewart, Brandon M.},
+	year = {2022},
+	month = {03},
+	date = {2022-03-29},
+	url = {https://press.princeton.edu/books/paperback/9780691207551/text-as-data},
+	langid = {en}
+}
